--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -73,6 +73,9 @@
   border: solid 1px #dbdbdb;
   background-color: white;
 }
+.storybox::-webkit-scrollbar {
+  width: 0;
+}
 
 .mainContainer {
   display: flex;
@@ -119,7 +122,7 @@
 .storyli {
   display: block;
   display: inline-grid;
-  margin-right: 15px;
+  margin-right: 19px;
 }
 .canvasBorder {
   position: absolute;
@@ -183,15 +186,55 @@
   margin-bottom: 24px;
   background-color: white;
 }
+.postImages {
+  max-width: 614px;
+  max-height: 614px;
+  width: 100%;
+  height: 100%;
+}
 .postImage {
   max-width: 614px;
   max-height: 614px;
+  width: 100%;
+  height: 100%;
 }
 .postPıtcure {
   max-width: 613px;
   max-height: 613px;
   width: 100%;
   height: 100%;
+}
+.video {
+  max-width: 613px;
+  max-height: 613px;
+  width: 100%;
+  height: 100%;
+}
+.video-wrapper {
+  max-width: 613px;
+  max-height: 613px;
+  width: 100%;
+  position: relative;
+}
+.controls {
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.video-control {
+  transition: opacity 200ms linear;
+}
+.control-shown {
+  opacity: 1;
+}
+.control-hidden {
+  opacity: 0;
 }
 .postIcons {
   display: flex;
@@ -447,6 +490,9 @@ textarea:focus {
   position: fixed;
   margin-left: 649px;
   margin-top: 451px;
+}
+.rightButton {
+  margin-right: auto;
 }
 
 /* .videoPlayButton {
