--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -12,13 +12,17 @@
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
 }
+.navCon {
+  max-width: 975px;
+  padding: 0 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
 .navContainer {
   max-width: 936px;
   display: flex;
   align-items: center;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
 }
 .navbar-brand {
   margin-top: 5px;
@@ -203,6 +207,7 @@
   max-height: 613px;
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .video {
   max-width: 613px;
@@ -451,6 +456,12 @@ textarea:focus {
 .suggestionUserName {
   font-weight: 600;
   font-size: 14px;
+  text-decoration: none;
+  color: black;
+}
+.suggestionUserName:hover {
+  text-decoration: underline;
+  color: black;
 }
 .suggestionUserDetail {
   margin-left: 13px;
