--- a/src/components/MediaModal.css
+++ b/src/components/MediaModal.css
@@ -5,7 +5,11 @@
   width: 100%;
   z-index: 10;
   background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  caret-color: transparent;
 }
+
 .close-button {
   right: 20px;
   top: 20px;
@@ -13,13 +17,17 @@
   background-color: rgba(0, 0, 0, 0);
   border: none;
 }
+.modal-section {
+  display: flex;
+  justify-content: center;
+}
 .modal-contento {
   display: flex;
   background-color: white;
   max-width: 935px;
   max-height: 600px;
   margin: auto;
-  margin-top: 5%;
+
   width: fit-content;
 }
 
@@ -27,9 +35,12 @@
   max-width: 600px;
   max-height: 600px;
   background-color: black;
+  display: flex;
+  align-items: center;
 }
 .image-div {
-  margin-top: 20%;
+  display: flex;
+  align-items: center;
 }
 
 .modal-image {
