--- a/src/containers/Profile.css
+++ b/src/containers/Profile.css
@@ -1,14 +1,12 @@
 .profileComponents {
   width: 100%;
   height: 100%;
-  /* position: relative; */
-  /* z-index: -1; */
-  padding-top: 59px;
 
+  padding-top: 59px;
+  caret-color: transparent;
   background-color: rgba(var(--b3f, 250, 250, 250), 1);
 }
 .profileComponent {
-  /* border: 2px solid green; */
   max-width: 935px;
   margin: 30px auto 30px;
 }
@@ -23,7 +21,6 @@
   margin-bottom: 12px;
 }
 .profileImage {
-  cursor: none;
   height: 197px;
   width: 292px;
   margin-right: 29px;
@@ -37,7 +34,6 @@
   border: 3.5px solid rgb(192, 83, 77);
   margin-top: -17px;
   margin-left: 61px;
-  cursor: none;
 }
 .profileImg {
   margin-left: 82px;
@@ -92,11 +88,12 @@
   margin-top: -4px;
   margin-left: -1px;
 }
-.moreButton {
+.mor-button {
   background-color: rgba(var(--b3f, 250, 250, 250), 1);
   width: 34px;
   height: 30px;
   margin-left: 6px;
+  border: none;
 }
 .moreIcon {
   margin-top: -4px;
