--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -104,7 +104,8 @@
   caret-color: transparent;
 }
 .storybox {
-  width: 614px;
+  max-width: 614px;
+  width: 100%;
   height: 118px;
   border: solid 1px #dbdbdb;
   border-radius: 3px;
@@ -143,7 +144,7 @@
   font-size: 12px;
   color: #262626;
   text-align: center;
-  margin-top: 4px;
+  margin-top: 2px;
 }
 .stroyimage {
   border: solid 1px #dbdbdb;
@@ -573,6 +574,9 @@ textarea:focus {
   }
 }
 @media (max-width: 500px) {
+  .mainContainer {
+    padding-top: 55px;
+  }
   .searchbar {
     display: none;
   }
